--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@ VITE_SUPABASE_PROJECT_ID=
 VITE_SUPABASE_PUBLISHABLE_KEY=
 VITE_SUPABASE_URL=
 
-# Google reviews
-VITE_GOOGLE_MAPS_API_KEY=
-VITE_GOOGLE_PLACE_ID=
+# Google reviews (server-side only)
+GOOGLE_PLACES_API_KEY=
+GOOGLE_PLACE_ID=
